[tool.poetry]
name = "btcrecover"
version = "0.1.0"
description = "BTCRecover is an open source wallet password and seed recovery tool. It is primarily useful if you have a reasonable idea about what your password might be."
authors = ["Willian Antunes <willian.lima.antunes@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
coincurve = ">=19.0.0,<19.1.0"
green = ">=3.3.0,<3.4.0"
protobuf = ">=3.19.1,<3.20.0"
pycryptodome = ">=3.19.1,<3.20.0"
ecdsa = "0.17.0"
groestlcoin-hash = ">=1.0.3,<1.1.0"
eth-keyfile = ">=0.6.1,<0.7.0"
py-crypto-hd-wallet = ">=1.1.0,<1.2.0"
pynacl = ">=1.4.0,<1.5.0"
bitstring = ">=3.1.9,<3.2.0"
shamir-mnemonic = {version = ">=0.3.0,<0.4.0", extras = ["cli"]}
bitcoin-utils = ">=0.5.5,<0.6.0"
pylibscrypt = ">=2.0.0,<2.1.0"
staking-deposit = {git = "https://github.com/ethereum/staking-deposit-cli.git", rev = "v2.5.0"}
py-ecc = ">=6.0.0,<6.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target_version = ["py312"]
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
py_version=312
force_single_line = true
line_length = 120
use_parentheses = true
multi_line_output = 5
include_trailing_comma = true
lines_between_types = 1
sections = ['FUTURE', 'STDLIB', 'DJANGO', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
