[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.12,<3.12.1 || >3.12.1,<4.0"
coincurve = "~=19.0.0"
protobuf = "~=3.19.1"
pycryptodome = "~=3.19.1"
ecdsa = "==0.17.0"
eth-keyfile = "~=0.6.1"
py-crypto-hd-wallet = "~=1.3.3"
pynacl = "~=1.5.0"
bitstring = "~=3.1.9"
shamir-mnemonic = {version = "~=0.3.0", extras = ["cli"]}
bitcoin-utils = "~=0.5.5"
pylibscrypt = "~=2.0.0"
py-ecc = "~=6.0.0"
staking-deposit = {git = "https://github.com/ethereum/staking-deposit-cli.git", rev = "v2.5.0"}
# https://github.com/3rdIteration/btcrecover/commit/d2023a167df4b6208456af19d8b51202052cde33#r156191802
sjcl = "~=0.2.1"
groestlcoin-hash = "~=1.0.3"
bsddb3 = "*"
# https://github.com/ydataai/ydata-profiling/issues/1618#issuecomment-2225195008
setuptools = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
target_version = ["py312"]
include = '\.pyi?$'
exclude = '''
(
  /(
    | \.git
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
  )/
)
'''

[tool.isort]
py_version=312
force_single_line = true
line_length = 120
use_parentheses = true
multi_line_output = 5
include_trailing_comma = true
lines_between_types = 1
sections = ['FUTURE', 'STDLIB', 'DJANGO', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']
